# spacePaint

./: .gitignore  CMakeLists.txt  GlobalNames.cpp  GlobalNames.h  LICENSE  MainWindow.cpp  MainWindow.h  README.md  main.cpp  resources.qrc  spacePaint.pro
MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
MdiChild/: MdiChild.cpp  MdiChild.h
NewFileDialog/: NewFileDialog.cpp  NewFileDialog.h  NewFileDialog.ui
PaintToolsPalette/: PaintToolsPalette.cpp  PaintToolsPalette.h  PaintToolsPalette.ui
PaintViewWidget/: PaintTool.h  PaintViewWidget.cpp  PaintViewWidget.h  PaintWidgetTestWindow.cpp  PaintWidgetTestWindow.h  PaintWidgetTestWindow.ui
Resources/Icons/PaintTools/: info.txt
TestData/: info.txt
Tests/: PaintViewWidgetTest.cpp  spacePaintTest.pro
